--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                             <p><a href="https://coco-factory.jp/ugokuweb/" target="_blank">動くWebデザインアイディア帳 様</a></p>
                             <p><a href="https://www.webcreatorbox.com/" target="_blank">Webクリエイターボックス 様</a></p>
                             <p><a href="https://b-risk.jp/" target="_blank">東京ホームページ制作BRISK 様</a></p>
+                            <p><a href="https://qiita.com/hayaharu3220/items/b7eb57a3689fb8050856" target="_blank">VSCodeからGitHubにコードをPushする方法</a>※Qiita記事</p>
                         </div>
                     </div>
             </div>
