HTMLUpdate ロゴにaltとリンク追加

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="Home">
     <header id="header">
         <div class="topMenu">
-            <div class="logo"><img src="./img/logo.png" alt="" class="logoImg"></div>
+            <div class="logo"><a href="https://camellia0405.github.io/Sample/"><img src="./img/logo.png" alt="WebDesign参考資料まとめロゴ" class="logoImg"></a></div>
         
             <nav>
                 <ul id="mainMenu">
