CSS/HTMLUpdate タブレット用画面のためにHTMLとCSSを修正

--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
 <body id="Home">
     <header id="header">
         <div class="topMenu">
-            <div class="logo"><a href="https://camellia0405.github.io/Sample/"><img src="./img/logo.png" alt="WebDesign参考資料まとめロゴ" class="logoImg"></a></div>
+            <div class="logo"><a href="https://camellia0405.github.io/Sample/"><img src="./img/logo.png" alt="WebDesign参考資料まとめロゴ" class="logoImg"></a>
+            </div>
         
-            <nav>
-                <ul id="mainMenu">
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Qiita">Qiita</a></li>
-                    <li class="listhover"><a href="#Document">Document</a>
-                        <!-- 参考資料用リスト -->
-                        <ul>
-                            <li class="documentList"><a href="#Link">Link</a></li>
-                            <li class="documentList"><a href="#Move">Move</a></li>
-                        </ul>
-                        <!-- 参考資料用リスト -->
-                    </li>
-                </ul>
-            </nav>
-        </div>
+            <div class="mainNavMenu">
+                <nav>
+                    <ul id="mainMenu">
+                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Qiita">Qiita</a></li>
+                        <li class="listhover"><a href="#Document">Document</a>
+                            <!-- 参考資料用リスト -->
+                            <ul>
+                                <li class="documentList"><a href="#Link">Link</a></li>
+                                <li class="documentList"><a href="#Move">Move</a></li>
+                            </ul>
+                            <!-- 参考資料用リスト -->
+                        </li>
+                    </ul>
+                </nav>
+            </div><!-- mainNavMenu -->
+        </div><!-- topMenu -->
         <!-- ハンバーガーメニュー -->
         <a href="#" class="hamburgerMenuButton">
             <span></span>
