HTMLUpdate ぱくたそ様リンク追加

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                             <p><a href="https://www.webcreatorbox.com/" target="_blank">Webクリエイターボックス 様</a></p>
                             <p><a href="https://b-risk.jp/" target="_blank">東京ホームページ制作BRISK 様</a></p>
                             <p><a href="https://qiita.com/hayaharu3220/items/b7eb57a3689fb8050856" target="_blank">VSCodeからGitHubにコードをPushする方法</a>※Qiita記事</p>
+                            <p><a href="https://www.pakutaso.com/" target="_blank">ぱくたそ 様</a>※写真素材をお借りしました。</p>
                         </div>
                     </div>
             </div>
