--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     <div class="text textLeft">
                         <p><a href="https://qiita.com/ume_work0831/items/985bbd8d0088cbebe0a3" target="_blank">◆HTML/CSS　備忘録① 親子関係</a></p>
                         <p><a href="https://qiita.com/ume_work0831/items/fb79a980bde0f506bc13" target="_blank">◆HTML/CSS　備忘録② ブロック要素とインライン要素</a></p>
+                        <p><a href="https://qiita.com/ume_work0831/items/b262efeb8ce94e50b6bf" target="_blank">◆HTML/CSS　備忘録③ 文字サイズの単位</a></p>
+                        <p><a href="https://qiita.com/ume_work0831/items/3ba8414c14ca0b13ee1e" target="_blank">【レスポンシブ対応】スマホ画面で生じた右側の謎の余白を消したい</a></p>
                     </div>
                 </div>
             </div>
